--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.48",
 		"@sveltejs/kit": "next",
+		"esbuild-wasm": "latest",
 		"svelte": "^3.46.0",
 		"vite": "^3.1.0",
-		"esbuild-wasm":"latest"
+		"vite-plugin-ssr": "^0.4.51"
 	},
 	"overrides": {
-	"esbuild":"npm:esbuild-wasm@latest"
+		"esbuild": "npm:esbuild-wasm@latest"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-preprocess": "^4.10.7"
+	}
 }
