--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.48",
 		"@sveltejs/kit": "next",
 		"esbuild-wasm": "latest",
+		"import-scss": "^0.1.3",
+		"sass": "^1.56.1",
 		"svelte": "^3.46.0",
+		"svelte-preprocess": "^4.10.7",
 		"vite": "^3.1.0",
 		"vite-plugin-ssr": "^0.4.51"
 	},
@@ -22,6 +25,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-preprocess": "^4.10.7"
+		"node-sass": "^8.0.0"
 	}
 }
